corrected menus z-indexes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -594,6 +594,10 @@ p {
   top: 0px;
 }
 
+.left-\[-1000\] {
+  left: -1000;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -618,6 +622,10 @@ p {
   margin-right: 5rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -640,6 +648,14 @@ p {
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mt-\[-2\.5rem\] {
+  margin-top: -2.5rem;
+}
+
+.mt-\[-1\.5rem\] {
+  margin-top: -1.5rem;
 }
 
 .block {
@@ -686,10 +702,6 @@ p {
   min-height: 100vh;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-4 {
   width: 1rem;
 }
@@ -704,6 +716,10 @@ p {
 
 .w-64 {
   width: 16rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .flex-1 {
@@ -797,11 +813,6 @@ p {
   background-color: 545153;
 }
 
-.bg-brand_red {
-  --tw-bg-opacity: 1;
-  background-color: rgb(183 18 52 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -827,6 +838,16 @@ p {
   padding: 0.25rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -845,11 +866,6 @@ p {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-4 {
@@ -951,7 +967,25 @@ p {
 .menu-zero {
   top: 0;
   left: 0;
+  z-index: 10;
+}
+
+.sidebar.menu-zero {
+  top: 194px;
+  left: 0;
   z-index: 1;
+}
+
+.sidebar.menu-down {
+  top: 352px;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.skip:focus {
+  left: 0;
 }
 
 .hover\:underline:hover {
@@ -987,17 +1021,7 @@ p {
   }
 }
 
-@media (min-width: 640px) {
-  .sm\:w-1\/3 {
-    width: 33.333333%;
-  }
-}
-
 @media (min-width: 768px) {
-  .md\:w-1\/4 {
-    width: 25%;
-  }
-
   .md\:p-16 {
     padding: 4rem;
   }
@@ -1014,6 +1038,10 @@ p {
 
   .lg\:left-0 {
     left: 0px;
+  }
+
+  .lg\:mt-auto {
+    margin-top: auto;
   }
 
   .lg\:hidden {
