--- a/src/main.css
+++ b/src/main.css
@@ -16,5 +16,21 @@
 .menu-zero {
   top: 0;
   left: 0;
+  z-index: 10;
+}
+.sidebar.menu-zero {
+  top: 194px;
+  left: 0;
   z-index: 1;
+}
+.sidebar.menu-down {
+  top: 352px;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.skip:focus {
+  left: 0;
 }
